# empi

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt
benchmarks/all_reduce/: umpi_allreduce.cpp
benchmarks/bcast/: empi_bcast.cpp  mpi_bcast.cpp  mpl_bcast.cpp  umpi_bcast.cpp
benchmarks/bdring/: mpi_bdring.cpp  mpl_bdring.cpp
benchmarks/datatypes/: CMakeLists.txt  utils.hpp
benchmarks/datatypes/2dTiled/: CMakeLists.txt  layout_utils.hpp
benchmarks/datatypes/2dTiled/bcast/: empi_bcast.cpp  mpi_bcast.cpp  pack_bcast.cpp
benchmarks/datatypes/2dTiled/ping_pong/: empi_ping_pong.cpp  mpi_ping_pong.cpp  pack_ping_pong.cpp
benchmarks/datatypes/alternating/allgather/: empi_allgather.cpp  mpi_allgather.cpp
benchmarks/datatypes/alternating/bcast/: empi_bcast.cpp  mpi_bcast.cpp
benchmarks/datatypes/alternating/ping_pong/: empi_ping_pong.cpp  mpi_ping_pong.cpp
benchmarks/datatypes/block/allgather/: empi_allgather.cpp  mpi_allgather.cpp
benchmarks/datatypes/block/bcast/: empi_bcast.cpp  mpi_bcast.cpp
benchmarks/datatypes/block/ping_pong/: empi_ping_pong.cpp  mpi_ping_pong.cpp
benchmarks/datatypes/bucket/allgather/: empi_allgather.cpp  mpi_allgather.cpp
benchmarks/datatypes/bucket/bcast/: empi_bcast.cpp  mpi_bcast.cpp
benchmarks/datatypes/bucket/ping_pong/: empi_ping_pong.cpp  mpi_ping_pong.cpp
benchmarks/datatypes/column/: CMakeLists.txt
benchmarks/datatypes/column/bcast/: empi_bcast.cpp  mpi_bcast.cpp  pack_bcast.cpp
benchmarks/datatypes/column/send/: empi_send.cpp  mpi_pack_send.cpp  mpi_send.cpp  pack_send.cpp
benchmarks/datatypes/tiled/: CMakeLists.txt  layout_utils.hpp
benchmarks/datatypes/tiled/allgather/: empi_allgather.cpp  mpi_allgather.cpp
benchmarks/datatypes/tiled/bcast/: empi_bcast.cpp  mpi_bcast.cpp  pack_bcast.cpp
benchmarks/datatypes/tiled/ping_pong/: empi_ping_pong.cpp  mpi_ping_pong.cpp  pack_ping_pong.cpp
benchmarks/ibcast/: empi_ibcast.cpp  umpi_ibcast.cpp
benchmarks/include/: bench_templates.hpp  benchmark.hpp  timings.hpp  utils.hpp
benchmarks/ping_pong/: empi_ping_pong.cpp  mpi_ping_pong.cpp  mpl_ping_pong.cpp  umpi_ping_pong.cpp
examples/: CMakeLists.txt
examples/all_reduce/: empi_allreduce.cpp  mpi_allreduce.cpp  mpl_allreduce.cpp  umpi_allreduce.cpp
examples/bcast/: empi_bcast.cpp  mpi_bcast.cpp  mpl_bcast.cpp  umpi_bcast.cpp
examples/bdring/: empi_bdring.cpp  mpi_bdring.cpp  mpl_bdring.cpp  umpi_bdring.cpp
examples/datatypes/: CMakeLists.txt  utils.hpp
examples/datatypes/alternating/: CMakeLists.txt
examples/datatypes/alternating/allgather/: empi_allgather.cpp  mpi_allgather.cpp
examples/datatypes/alternating/bcast/: empi_bcast.cpp  mpi_bcast.cpp
examples/datatypes/alternating/ping_pong/: empi_ping_pong.cpp  mpi_ping_pong.cpp
examples/datatypes/block/: CMakeLists.txt
examples/datatypes/block/allgather/: empi_allgather.cpp  mpi_allgather.cpp
examples/datatypes/block/bcast/: empi_bcast.cpp  mpi_bcast.cpp
examples/datatypes/block/ping_pong/: empi_ping_pong.cpp  mpi_ping_pong.cpp
examples/datatypes/bucket/: CMakeLists.txt
examples/datatypes/bucket/allgather/: empi_allgather.cpp  mpi_allgather.cpp
examples/datatypes/bucket/bcast/: empi_bcast.cpp  mpi_bcast.cpp
examples/datatypes/bucket/ping_pong/: empi_ping_pong.cpp  mpi_ping_pong.cpp
examples/datatypes/tiled/: CMakeLists.txt
examples/datatypes/tiled/allgather/: empi_allgather.cpp  mpi_allgather.cpp
examples/datatypes/tiled/bcast/: empi_bcast.cpp  mpi_bcast.cpp
examples/datatypes/tiled/ping_pong/: empi_ping_pong.cpp  mpi_ping_pong.cpp
examples/ibcast/: CMakeLists.txt  empi_ibcast.cpp  mpi_ibcast.cpp  mpl_ibcast.cpp  umpi_ibcast.cpp
examples/pack-unpack-submatrix/: pack-unpack-submatrix.cpp
examples/ping_pong/: empi_ping_pong.cpp  mpi_ping_pong.cpp  mpl_ping_pong.cpp  umpi_ping_pong.cpp
examples/type-vector-simple/: type-vector-simple.cpp
examples/vibrating_string/: empi_vibrating_string.cpp
include/empi/: compact.hpp  context.hpp  datatype.hpp  defines.hpp  empi.hpp  layouts.hpp  layouts_traits.hpp  message_group.hpp  message_grp_hdl.hpp  request.hpp  request_pool.hpp  tag.hpp  time.hpp  type_traits.hpp  utils.hpp
include/empi/compact/: common_compact.hpp  compact.hpp  compact_layout_stride.hpp
scripts/: common.py  datatype.py  minibench.py
test/: CMakeLists.txt  catch_main.cpp  test_compact.cpp  test_layouts.cpp  test_message_group_hdl.cpp  test_type_traits.cpp  test_utils.cpp  utils.hpp
